[tool.poetry]
name = "scraping-websites"
version = "0.1.0"
description = ""
authors = ["George Zhang <geetransit@gmail.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
